kpt/eda-kpt-asset-host/host-images/registry-deployment.yaml
# Source: docker-registry/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-docker-registry
  namespace: "eda-assets" # kpt-set: ${EDA_NAMESPACE_ASSET_HOST}
  labels:
    app: docker-registry
spec:
  selector:
    matchLabels:
      app: docker-registry
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: docker-registry
      annotations:
        checksum/config: cd6abaa4825a913e791808075f5bff6d5be043d04594e44fbe6e0f5522ed96f8
        checksum/secret: 26f4802fbe6cab2fcdf510a1be1a448807b9526007a753fab79f618d9018595b
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      containers:
        - name: docker-registry
          image: ghcr.io/nokia-eda/adm/registry:2.8.3
          imagePullPolicy: IfNotPresent
          command:
            - /bin/registry
            - serve
            - /etc/docker/registry/config.yml
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /
              port: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
          resources: {}
          volumeMounts:
            - name: "registry-docker-registry-config"
              mountPath: "/etc/docker/registry"
            - name: data
              mountPath: /var/lib/registry/
      volumes:
        - name: registry-docker-registry-config
          configMap:
            name: registry-docker-registry-config
        - name: data
          persistentVolumeClaim:
            claimName: registry-docker-registry
