kpt/eda-kpt-asset-host/host-images/registry-service.yaml
# Source: docker-registry/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-docker-registry
  namespace: "eda-assets" # kpt-set: ${EDA_NAMESPACE_ASSET_HOST}
  labels:
    app: docker-registry
spec:
  type: ClusterIP
  ports:
    - port: 5000
      protocol: TCP
      name: http-5000
      targetPort: 5000
  selector:
    app: docker-registry
