kpt/eda-kpt-asset-host/host-images/registry-ingress.yaml
# Source: docker-registry/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-docker-registry
  namespace: "eda-assets" # kpt-set: ${EDA_NAMESPACE_ASSET_HOST}
  labels:
    app: docker-registry
spec:
  ingressClassName: nginx
  rules:
    - host: registry.assets.local
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: registry-docker-registry
                port:
                  number: 5000
    - host: ""
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: registry-docker-registry
                port:
                  number: 5000
